# skill-compress

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: binaries.yml  ci.yml
benchmark/: README.md  run_benchmark.py
docs/bmad/: README.md  architecture.md  epics-and-stories.md  llm-service.md  prd.md  project-brief.md  quality-and-evals.md
examples/: sample-skill.md
src/: fidelity.rs  lib.rs  llm.rs  main.rs  minifier.rs  skill.rs
